--- a/src/LoginCidadao/CoreBundle/Resources/public/css/general.css
+++ b/src/LoginCidadao/CoreBundle/Resources/public/css/general.css
@@ -503,6 +503,27 @@ form .has-feedback .sr-only ~ .form-control-feedback {
     text-shadow: 1px 1px 1px #D8D8D8;
 }
 
+/* IdCultura */
+a {
+    color: #00918C;
+}
+
+.form-control {
+    background-color: #FFFF;
+}
+
+footer h3 {
+    color: #000;
+    text-shadow: none;
+}
+
+footer li a {
+    color: #000;
+}
+
+footer a:hover {
+    color: #074542;
+}
 .intl-tel-label {
     display: block;
 }
