colocado footer no template usando o footer.html.twig, ainda falta img logo gov federal

--- a/src/LoginCidadao/CoreBundle/Resources/views/footer.html.twig
+++ b/src/LoginCidadao/CoreBundle/Resources/views/footer.html.twig
@@ -38,4 +38,18 @@
       {% block credits %}{% endblock %}
     </div>
   </div>
+<div class="gov_federal">
+  <div class="content container">
+    <div class="row inner-row">
+          <div class="col-sm-12 col-lg-6">
+              <div class="acesso_info"> Acesso à Informação
+              </div>
+            </div>
+            <div class="col-sm-12 col-lg-6">
+              <div class="logo_gov">Logo Governo Federal
+              </div>
+            </div>
+    </div>
+  </div>
+</div>
 </footer>
