--- a/src/LoginCidadao/CoreBundle/Resources/public/css/compact/compact.css
+++ b/src/LoginCidadao/CoreBundle/Resources/public/css/compact/compact.css
@@ -7,8 +7,7 @@
  * file that was distributed with this source code.
  */
 
-html, body {
-    font-family: "Open Sans", Arial, sans-serif;
+html {
     background-color: #f9f9f9;
 }
 
@@ -120,27 +119,46 @@ footer ul.dashed > li:before {
     font-weight: bold;
 }
 
-.btn-outline {
-    background: none !important;
-    text-shadow: none !important;
-    outline: none !important;
+/* IdCultura */
+
+body {
+  background-color: #FFF;
+  background-image: url('../../images/ID_BG.svg');
+  background-size: inherit;
 }
-.btn-outline.btn-danger {
-    color: #ac0000;
-    border-width: 2px;
-    border-color: #ac0000;
+.box .title {
+  background-image: url('../../images/ID_TituloCaixa.png') !important;
+  background-size: 100%;
 }
 
-.error-page h2 {
-    text-align: center;
-    font-size: 20px;
-    margin-top: 0;
+.box {
+  background: #EFEFEF;
 }
 
-form .error {
-    color: #ac0000;
+.box form {
+  border: solid 1px #F2F2F2;
 }
 
-.intl-tel-label {
-    display: block;
+.connect-box {
+  border: solid 1px #F2F2F2;
+}
+
+.connect-box h3 {
+  color: #000;
+  text-shadow: none;
+}
+
+.lc-main-title h1, .lc-main-title h2 {
+  text-shadow: none;
+  color: #000;
+}
+
+.btn-success {
+  background-color: #00918C;
+  border: none;
+}
+
+.btn-success:hover {
+  background-color: #074542;
+  border: none;
 }
