update template files to ID Cultura

--- a/src/LoginCidadao/IdCulturaBundle/Resources/views/footer.html.twig
+++ b/src/LoginCidadao/IdCulturaBundle/Resources/views/footer.html.twig
@@ -6,10 +6,9 @@
       <div class="col-sm-12 col-lg-4">
         <h3>{% trans %}Useful Information{% endtrans %}</h3>
         <ul>
-          <li><a href="{{ path('lc_about') }}">ID da Cultura</a></li>
+          <li><a href="{{ path('lc_about') }}">{% trans %}About Citizen's Login{% endtrans %}</a></li>
           <li><a href="{{ path('lc_privacy') }}">{% trans %}Privacy and Terms of Service{% endtrans %}</a></li>
-          <li><a href="https://github.com/culturagovbr/id-cultura" target="_blank">{% trans %}GitHub Repository{% endtrans %}</a></li>
-          <li><a href="{{ asset('humans.txt') }}" target="_blank">humans.txt</a></li>
+          <li><a href="https://github.com/PROCERGS/login-cidadao/" target="_blank">{% trans %}GitHub Repository{% endtrans %}</a></li>
         </ul>
       </div>
 
