--- a/src/LoginCidadao/IdCulturaBundle/Resources/views/Info/about.html.twig
+++ b/src/LoginCidadao/IdCulturaBundle/Resources/views/Info/about.html.twig
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-xs-12 text-center header-shadows">
-        <h1>ID da Cultura</h1>
+        <h1>{% trans %}Citizen's Login{% endtrans %}</h1>
         <h2 class="slogan hidden-xs">{% trans %}One account. The entire Government.{% endtrans %}</h2>
     </div>
 </div>
@@ -21,9 +21,9 @@
         </div>
 
         <div class="text">
-            <p>O ID cultura tem o objetivo de promover a integração, o cadastro e a autenticação do cidadão junto às ferramentas e os Serviços Digitais do Governo, facilitando o relacionamento da pessoa física com o Governo do Estado e abrindo caminho para a adoção de uma Identidade Digital para as cidadãs e os cidadãos gaúchos.</p>
+          <p>O ID cultura tem o objetivo de promover a integração, o cadastro e a autenticação do cidadão junto às ferramentas e os Serviços Digitais do Governo, facilitando o relacionamento da pessoa física com o Governo do Estado e abrindo caminho para a adoção de uma Identidade Digital para as cidadãs e os cidadãos gaúchos.</p>
 
-            <p>A iniciativa promove a desburocratização e a integração de sistemas, diminui a possibilidade de fraudes e padroniza o acesso às bases de dados do Estado, ao passo que permite o registro automatizado e o acompanhamento sistemático da interação dos cidadãos com os serviços digitais providos pela Administração Pública.</p>
+          <p>A iniciativa promove a desburocratização e a integração de sistemas, diminui a possibilidade de fraudes e padroniza o acesso às bases de dados do Estado, ao passo que permite o registro automatizado e o acompanhamento sistemático da interação dos cidadãos com os serviços digitais providos pela Administração Pública.</p>
         </div>
     </div>
 </div>
