Add html bg at base template

--- a/src/IdCultura/IdCulturaBundle/Resources/views/base.html.twig
+++ b/src/IdCultura/IdCulturaBundle/Resources/views/base.html.twig
@@ -23,6 +23,7 @@
 
 {% block stylesheets %}
 	{% block stylesheets_custom %}
+		<style>html{background-color:#fff;}</style>
 	    {% stylesheets '@lc_base_css' filter='cssrewrite' filter='?uglifycss' %}
 			<link rel="stylesheet" href="{{ asset_url }}" />
 	    {% endstylesheets %}
